implement api/users/activate-by-id/{userId} endpoint.
