# public/swagger/swagger.yaml
@@ -498,6 +498,48 @@ paths:
 
   #!_______________________________________________________________________________________________________
 
+  /api/users/activate-by-id/{userId}:
+    put:
+      tags:
+        - Users
+      security:
+        - bearerAuth: []
+      description: Allows super admin to activate user's account.
+      parameters:
+        - in: params
+          name: userId
+          schema:
+            type: string
+          description: User's Id (Required)
+      responses:
+        "200":
+          description: User activated successfully.
+        "400":
+          description: Authorization token is missing or invalid format.
+        "401":
+          description: |
+            Unauthorized:
+            - The access token has expired. Please request a new access token using the refresh token.
+            - The access token is invalid. Authentication required.
+        "403":
+          description: |
+            Forbidden:
+            - The logged in user has been suspended.
+            - Access denied: User do not have the necessary permissions to perform this action.
+            - Requested user already activated.
+        "404":
+          description: |
+            Not Found: 
+            - Logged in user not found.
+            - Requested user not found.
+        "500":
+          description: |
+            Internal server error:
+            - Internal server error.
+            - An error occurred while accessing the database. Please try again later.
+
+  #!_______________________________________________________________________________________________________
+
   /api/users/email-verification/{emailVerificationToken}:
     get:
       description: Verification of user email.
